RESOLVED FIXED318941
DOMAsyncIterator should not store the callNext and callReturn callback as the same member
https://bugs.webkit.org/show_bug.cgi?id=318941
Summary DOMAsyncIterator should not store the callNext and callReturn callback as the...
youenn fablet
Reported 2026-07-09 01:51:54 PDT
DOMAsyncIterator should not store the callNext and callReturn callback as the same member
Attachments
Radar WebKit Bug Importer
Comment 1 2026-07-09 01:52:06 PDT
youenn fablet
Comment 2 2026-07-09 02:46:31 PDT
EWS
Comment 3 2026-07-10 00:46:22 PDT
Committed 316874@main (618439522572): <https://commits.webkit.org/316874@main> Reviewed commits have been landed. Closing PR #68987 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.